Update Fetching Games of category